--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
   --maxWidth-3xl: 60rem;
   --maxWidth-4xl: 68rem;
   --maxWidth-full: "100%";
-  --maxWidth-wrapper: var(--maxWidth-2xl);
+  --maxWidth-wrapper: 80rem;
   --spacing-px: "1px";
   --spacing-0: 0;
   --spacing-1: 0.25rem;
@@ -27,8 +27,8 @@
   --spacing-20: 5rem;
   --spacing-24: 6rem;
   --spacing-32: 8rem;
-  --fontFamily-sans: system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+  --fontFamily-sans: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --fontFamily-serif: "Merriweather", "Georgia", Cambria, "Times New Roman",
     Times, serif;
@@ -233,7 +233,7 @@ table thead tr th {
 /* Link */
 
 a {
-  color: var(--color-primary);
+  color: var(--color-heading);
 }
 
 a:hover,
@@ -262,21 +262,23 @@ a:focus {
 .main-heading {
   font-size: var(--fontSize-7);
   margin: 0;
-  margin-top: var(--spacing-8);
   display: flex;
+  font-weight: 500;
+  font-family: var(--fontFamily-serif);
+  color: #2e353f;
 }
 
 .post-list {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  grid-column-gap: 16px;
+  grid-column-gap: 4px;
 }
 
 @media (min-width: 768px) {
   .post-list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 16px;
+    grid-column-gap: 4px;
   }
 }
 
@@ -330,7 +332,7 @@ a:focus {
 
 .blog-post header p {
   font-size: var(--fontSize-1);
-  font-family: var(--font-heading);
+  font-family: var(--font-body);
   margin-bottom: var(--spacing-3);
 }
 
@@ -344,6 +346,8 @@ a:focus {
 
 .header-wrapper {
   align-items: center;
+  display: flex;
+  justify-content: space-between;
 }
 
 .header-nav {
@@ -395,7 +399,15 @@ a:focus {
   position: relative;
 }
 
-.post-title:hover .post-title-mask, 
+.post-main-title {
+  font-family: var(--font-body);
+}
+
+.post-main-date {
+  font-family: var(--font-body);
+}
+
+.post-title:hover .post-title-mask,
 .post-title:focus .post-title-mask {
   opacity: 0.8;
 }
@@ -418,8 +430,9 @@ a:focus {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: var(--fontSize-4);
+  font-size: var(--fontSize-5);
   color: #fff;
+  font-family: var(--font-body);
 }
 
 /* Media queries */
