--- a/src/style.css
+++ b/src/style.css
@@ -451,3 +451,18 @@ a:focus {
     list-style-position: inside;
   }
 }
+
+.footer-contacts {
+  margin-bottom: 12px;
+}
+
+.footer-contacts-icon {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  fill: var(--color-text);
+}
+
+.footer-contacts-icon:hover {
+  fill: var(--color-black);
+}
