--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
   --maxWidth-3xl: 60rem;
   --maxWidth-4xl: 68rem;
   --maxWidth-full: "100%";
-  --maxWidth-wrapper: 80rem;
+  --maxWidth-wrapper: 70%;
   --spacing-px: "1px";
   --spacing-0: 0;
   --spacing-1: 0.25rem;
@@ -249,7 +249,8 @@ a:focus {
 
 .global-wrapper {
   margin: var(--spacing-0) auto;
-  max-width: var(--maxWidth-wrapper);
+  width: 70%;
+  max-width: 1100px;
   padding: var(--spacing-10) var(--spacing-5);
   position: relative;
   min-height: 100vh;
