--- a/src/style.css
+++ b/src/style.css
@@ -269,15 +269,34 @@ a:focus {
 }
 
 .post-list {
-  margin-top: 32px;
+  margin-top: 5vh;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-column-gap: 12px;
   grid-row-gap: 12px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
   .post-list {
+    margin-top: 15vh;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+  }
+}
+
+.sub-post-list {
+  margin-top: 5vh;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-column-gap: 12px;
+  grid-row-gap: 12px;
+}
+
+@media (min-width: 1200px) {
+  .sub-post-list {
+    margin-top: 15vh;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 16px;
@@ -338,6 +357,7 @@ a:focus {
   align-items: center;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 4em;
 }
 
 .header-nav {
@@ -359,8 +379,15 @@ a:focus {
   margin-left: var(--spacing-4);
 }
 
+.post-link {
+  display: block;
+  height: 100%;
+}
+
 .post-image {
+  display: block;
   max-width: 100%;
+  height: 100%;
   transition: 250ms ease-in-out;
 }
 
@@ -459,4 +486,17 @@ footer {
 
 main {
   margin-bottom: 120px;
+}
+
+.breadcrumbs {
+  color: #7c7c7c;
+  font-size: 1.25em;
+  margin-top: 0.2em;
+}
+
+@media (min-width: 768px) {
+  .breadcrumbs {
+    font-size: 1.5em;
+    margin-top: 0.4em;
+  }
 }
