--- a/src/style.css
+++ b/src/style.css
@@ -84,6 +84,10 @@ body {
   color: var(--color-text);
 }
 
+.overlay {
+  overflow: hidden;
+}
+
 footer {
   padding: var(--spacing-6) var(--spacing-0);
   position: absolute;
@@ -122,7 +126,7 @@ h6 {
 
 h1 {
   font-weight: var(--fontWeight-black);
-  font-size: var(--fontSize-6);
+  font-size: var(--fontSize-1);
   color: var(--color-heading-black);
 }
 
@@ -244,7 +248,6 @@ a:focus {
 
 .global-wrapper {
   margin: var(--spacing-0) auto;
-  width: 76%;
   max-width: 1100px;
   padding: var(--spacing-10) var(--spacing-5);
   position: relative;
@@ -260,12 +263,24 @@ a:focus {
 }
 
 .main-heading {
-  font-size: var(--fontSize-7);
+  font-size: var(--fontSize-3);
   margin: 0;
   display: flex;
   font-weight: 500;
   font-family: var(--fontFamily-serif);
   color: #2e353f;
+}
+
+@media (min-width: 768px) {
+  .main-heading {
+    font-size: var(--fontSize-4);
+  }
+}
+
+@media (min-width: 900px) {
+  .main-heading {
+    font-size: var(--fontSize-6);
+  }
 }
 
 .post-list {
@@ -499,4 +514,75 @@ main {
     font-size: 1.5em;
     margin-top: 0.4em;
   }
+}
+
+.slider-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: #2f2f2f;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.indicators {
+  display: grid !important;
+  grid-auto-columns: minmax(0, 1fr);
+  grid-auto-flow: column;
+  position: absolute;
+  bottom: 0;
+  left: 1vw;
+  right: 1vw;
+  width: fit-content;
+  margin: auto;
+  bottom: 4vh;
+  gap: 1px;
+}
+
+.indicator {
+  width: 100%;
+  max-width: 65px;
+  cursor: pointer;
+  transition: 180ms;
+}
+
+.indicator > img {
+  height: 100%;
+  display: inline-block;
+}
+
+.indicator.active {
+  z-index: 1;
+  transform: scale(1.33);
+  outline: 1px solid rgb(174, 174, 174);
+}
+
+.react-slideshow-container .default-nav:first-of-type {
+  left: 10px !important;
+}
+.react-slideshow-container .default-nav:last-of-type {
+  right: 10px !important;
+}
+
+.hide {
+  display: none;
+}
+
+.close-button {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  border-radius: 50%;
+  border: none;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: none;
+  color: rgba(255, 255, 255, 0.6);
 }
