--- a/src/style.css
+++ b/src/style.css
@@ -522,7 +522,7 @@ main {
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: #2f2f2f;
+  background-color: #171717;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -572,18 +572,28 @@ main {
   display: none;
 }
 
+svg {
+  fill: #2f2f2f;
+}
+
 .close-button {
   position: fixed;
   top: 10px;
   right: 10px;
   border-radius: 50%;
   border: none;
-  width: 40px;
-  height: 40px;
+  width: 2.25em;
+  height: 2.25em;
   display: flex;
   align-items: center;
   justify-content: center;
   background: none;
   color: rgba(255, 255, 255, 0.6);
   z-index: 1;
+}
+
+.close-button > svg {
+  width: 100%;
+  height: 100%;
+  fill: rgba(255, 255, 255, 0.6);
 }
