--- a/src/style.css
+++ b/src/style.css
@@ -582,8 +582,8 @@ svg {
   right: 10px;
   border-radius: 50%;
   border: none;
-  width: 2.25em;
-  height: 2.25em;
+  width: 40px;
+  height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
